fea-rs/test-data/parse-tests/bad/rsub_input_len.fea
feature test {
    # only a single item after 'by'
    rsub a b' by c d;
} test;
